templates/network_policies/allow_dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
spec:
  podSelector:
    matchLabels:
      app: backend
  egress:
    - ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
